# compecs

./: .clang-format  .gitignore  compile_commands.json
,github/workflows/: ci-gtest.yaml
.github/workflows/: ci-gtest.yaml
cpp/: CMakeLists.txt
cpp/include/archetype/: archetype.hpp
cpp/include/components/: component.hpp  component_def.hpp
cpp/include/concepts/: compositions.hpp  packs.hpp
cpp/include/manager/: manager.hpp
cpp/include/query/: query.hpp
cpp/include/simd/: float_vec.hpp  int_vec.hpp  traits.hpp  uint_vec.hpp
cpp/include/utils/: aligned_allocator.hpp  checks.hpp  compositions.hpp  lambda_traits.hpp  packs.hpp  tuples.hpp
cpp/tests/utils/: aligned_allocator.cpp  checks.cpp  checks_test.cpp  compositions_test.cpp  lambda_traits_test.cpp  packs_test.cpp  tuples_test.cpp
